# ram

./: PITCH.md  README.md
ram-backend/: .env.example  .gitignore  Cargo.toml  DOCKER.md  INTEGRATION.md  QUICKSTART.md  README.md  docker-compose.yml  run.sh
ram-backend/.sqlx/: query-4ab241aa16d81476cdd82cbcb51d8cfbcae64a1f9d19e8a66497a32732d0a104.json  query-b835223a1b0a8acefd159a50811afa54ce4f49f426f387fafa63ee3a10205f84.json
ram-backend/migrations/: 20240209_init.sql
ram-backend/src/: database.rs  indexer.rs  main.rs  models.rs  proxy.rs
ram-frontend/: .env.example  index.html  package-lock.json  package.json
ram-frontend/public/: site.webmanifest
ram-frontend/src/: App.css  App.tsx  index.css
ram-frontend/src/components/: ActionCard.css  ActionCard.tsx  DepositPanel.css  DepositPanel.tsx  Header.css  Header.tsx  TransferPanel.css  TransferPanel.tsx  VoiceAuth.css  VoiceAuth.tsx  WalletMenu.css  WalletMenu.tsx  WithdrawPanel.css  WithdrawPanel.tsx
ram-frontend/src/hooks/: useRamWallet.ts
ram-frontend/src/pages/: DepositPage.css  DepositPage.tsx  HistoryPage.css  HistoryPage.tsx  HomePage.css  HomePage.tsx  TransferPage.css  TransferPage.tsx
ram-frontend/src/services/: ramApi.ts
ram-nautilus/: .env.example  .gitignore
ram-nautilus/move/ram/: Move.toml  publish_output.txt
ram-nautilus/move/ram/sources/: bioguard.move  core.move  events.move  tests.move  transfers.move  wallet.move
ram-nautilus/src/nautilus-server/: .env.example  Cargo.toml  Dockerfile  check_usage.py
ram-nautilus/src/nautilus-server/src/: common.rs  lib.rs
(+5 files in other folders)
